Make the text visible Fix the styling on the main text

--- a/source/stylesheets/demo/homepage/_hero.scss
+++ b/source/stylesheets/demo/homepage/_hero.scss
@@ -15,6 +15,8 @@
     @extend %col-xs-8;
     margin: 0;
     padding-top: 20%;
+    color: white;
+    text-shadow: 1px 1px #222;
 
     @media screen and (max-width: $screen-md-max){
       padding-top: 15%;
